use modern List features
Signed-off-by: Stefan Bischof <stbischof@bipolis.org>