@@ -27,7 +27,6 @@ package org.eclipse.daanse.olap.common;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -282,7 +281,7 @@ public final class IdBatchResolver {
         }
         // don't want to fail at this point.  Member resolution still has
         // another chance to succeed.
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
